2007-10-02  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: cleaner macros
* cycle_map.c: minor cleanup
* ui.c, README, amiga/Atari800.guide: GPL version 2 now, not 1
* most files: FSF address change in GPL notices.

2007-09-30  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: Added better support for GTIA bug mode.

2007-09-12  Perry McFarlane  <perry_m@fastmail.fm>
* memory.c: Fix PAGED_MEM error (missing break in switch) with POKEY in loading
  saved states.
* memory.[ch], statesav.c, cpu.c Support Axlon and Mosaic state saving.
  SAVE_VERSION_NUMBER upgraded to from 4 to 5

2007-09-06  Perry McFarlane  <perry_m@fastmail.fm>
* memory.[ch], atari.c, TODO, USAGE: add Axlon and Mosaic RAM expansions for the
  400/800

2007-08-04  Perry McFarlane  <perry_m@fastmail.fm>
* memory.c: fix PBIM1/M2_Get/PutByte in MemStateRead
* atari_ntsc.c: tweak default parameters a bit

2007-08-02  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c: fix broken Caps Lock key handling
* atari_sdl.c: reduce default NTSC scanlines percentage from 20 to 5

2007-07-31  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac, INSTALL: fix for windows sdl version.  Don't use -mwindows or
  -Dmain=SDL_main and use -mno-cygwin on Cygwin.  SDL_win32_main.c is now 
  required from the sdl source.  Update documentation in INSTALL. This fixes
  the stdout.txt problem.
* atari_sdl.c: fix for windows sdl version.  Make SDL_VIDEODRIVER=directx by
  default because it is much faster.  SDL 1.2.10+ uses windib as the default.
* atari_sdl.c: added interpolated scanlines, made it the default, added
  -scanlinesnoint option to disable it

2007-07-30  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: fix for windows sdl version.  Don't require winmm or gdi32

** 2.0.3 released on 2007-07-11

2007-04-23  Piotr Fusik  <fox@scene.pl>
* win32/msc/Makefile: fixed a problem that appeared when I switched to another
  version of NMAKE ("fatal error U1100: macro '$@' is illegal in the context